--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class = "container anime" id="container">
     <div class="row1 board">
         <div class="yline" id="00">
-            
+            &nbsp
         </div>
         <div class="yline" id="01">
             &nbsp
@@ -75,6 +75,15 @@
         <img src="github-mark.png" alt="">
     </div>
     
+    <div class="lines h1"></div>
+    <div class="lines h2"></div>
+    <div class="lines h3"></div>
+    <div class="lines v1"></div>
+    <div class="lines v2"></div>
+    <div class="lines v3"></div>
+    <div class="lines d1"></div>
+    <div class="lines d2"></div>
+   
 </body>
 <script src="script.js"></script>
 </html>
