Added a medium mode

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div class="level">
     <select name="level" id="level">
         <option value="easy">Easy</option>
+        <option value="medium">Medium</option>
         <option value="unbeatable" selected>Unbeatable</option>
         <option value="PVP">PlayerVsPlayer</option>
     </select>
